--- a/dns/values.yaml
+++ b/dns/values.yaml
@@ -1,4 +1,5 @@
 # Déploiement CoreDNS comme DNS externe pour réseau local
+# Prendre note que ce chart Helm ne supporte qu'une seule zone. On est donc limité à spécifier la zone racine '.:53', et on peut donc inclure des zones supplémentaires avec le plugin 'file'.
 
 serviceType: "LoadBalancer"
 
@@ -12,8 +13,8 @@ service:
 # configuration CoreDNS
 servers:
   - zones:
-      - zone: ici
-    port: 5353
+      - zone: .
+    port: 53
     plugins:
       - name: errors
       - name: health
@@ -22,7 +23,7 @@ servers:
         parameters: /etc/coredns/ici.db ici
       - name: forward
         # transférer au routeur puis aux serveurs DNS Vidéotron
-        parameters: . 192.168.50.1 24.200.241.37 24.201.245.77 24.200.243.189
+        parameters: . 24.200.241.37 24.201.245.77
       - name: cache
         parameters: 30
 
