--- a/k3s/config.yaml
+++ b/k3s/config.yaml
@@ -1,7 +1,7 @@
 # configuration K3s
 secrets-encryption: true
 tls-san:
-  - kubernetes.ici
-  - cloud.ici
-  - nuage.ici
-  - motel.ici
+  - kubernetes.rloc
+  - cloud.rloc
+  - nuage.rloc
+  - motel.rloc
