feat(k3s): ajout du PC comme agent au cluster k3s avec support GPU - non terminé
- nvidia-device-plugin pas correctement configuré, possiblement à cause du taint nvidia.com/gpu

--- a/helm-repos.yaml
+++ b/helm-repos.yaml
@@ -5,3 +5,5 @@
   url: https://nextcloud.github.io/helm/
 - name: coredns
   url: https://coredns.github.io/helm
+- name: nvidia-device-plugin
+  url: https://nvidia.github.io/k8s-device-plugin
