fix(k3s): configuration d'un agent k3s avec support GPU
- on doit configurer 'nvidia' comme runtime par défaut sur l'agent dédié aux charges nécessitant le GPU
- ne pas ajouter de teinte à l'agent dès le début, sinon les composantes ne s'installent pas
- on doit activer GPU Feature Discovery en déployant nvidia-device-plugin

--- a/k3s/config-worker-gpu.yaml
+++ b/k3s/config-worker-gpu.yaml
@@ -1,8 +1,12 @@
 # configuration d'un agent, un worker k3s
 server: https://kubernetes.rloc:6443
 token-file: /etc/rancher/k3s/node-token
-secrets-encryption: true
+default-runtime: nvidia
 node-label:
   - gpu=nvidia
-node-taint:
-  - nvidia.com/gpu:NoSchedule
+  - node-role.kubernetes.io/gpu=true
+  - node-role.kubernetes.io/worker=true
+# appliquer le taint après la configuration de l'agent et le déploiement
+# du NVIDIA device plugin, et de Node Feature Discovery
+# node-taint:
+#   - nvidia.com/gpu:NoSchedule
