--- a/helm-repos.yaml
+++ b/helm-repos.yaml
@@ -5,5 +5,7 @@
   url: https://nextcloud.github.io/helm/
 - name: coredns
   url: https://coredns.github.io/helm
-- name: nvidia-device-plugin
+- name: nfd
+  url: https://kubernetes-sigs.github.io/node-feature-discovery/charts
+- name: nvdp
   url: https://nvidia.github.io/k8s-device-plugin
