fix(k3s): les labels node-role sont réservés
k3s plante au redémarrage sur une machine lorsqu'on le configure avec des labels node-role.kubernetes.io

--- a/k3s/config-worker-gpu.yaml
+++ b/k3s/config-worker-gpu.yaml
@@ -4,8 +4,11 @@ token-file: /etc/rancher/k3s/node-token
 default-runtime: nvidia
 node-label:
   - gpu=nvidia
-  - node-role.kubernetes.io/gpu=true
-  - node-role.kubernetes.io/worker=true
+  # l'ajout de ces labels empêche le démarrage de k3s avec l'erreur
+  #   Error: failed to validate kubelet flags: unknown 'kubernetes.io' or 'k8s.io'
+  #   labels specified with --node-labels
+  # - node-role.kubernetes.io/gpu=true
+  # - node-role.kubernetes.io/worker=true
 # appliquer le taint après la configuration de l'agent et le déploiement
 # du NVIDIA device plugin, et de Node Feature Discovery
 # node-taint:
