--- a/.gitignore
+++ b/.gitignore
@@ -40,5 +40,7 @@
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 
-# fichier combustion généré, avec hash de secrets
+# fichier combustion généré, avec hash de secrets,
+# clés SSH publiques copiées par le script de génération du script de combustion
 microos/combustion/script
+microos/combustion/*.pub
