feat (microos): ajout de rclone, correction domaines k3s - changement de .domicile.internal pour juste .internal

--- a/microos/configuration/config-base.json
+++ b/microos/configuration/config-base.json
@@ -71,7 +71,7 @@
       {
         "name": "k3s-install.service",
         "enabled": false,
-        "contents": "[Unit]\nDescription=Run k3s installer\nWants=network-online.target\nAfter=network.target network-online.target\nConditionPathExists=/usr/bin/k3s_installer.sh\nConditionPathExists=!/usr/local/bin/k3s\n[Service]\nType=forking\nTimeoutStartSec=120\nEnvironment=\"INSTALL_K3S_EXEC=server --cluster-init --write-kubeconfig-mode=644 --secrets-encryption=true --kube-apiserver-arg enable-admission-plugins=ExtendedResourceToleration --tls-san k3s.domicile.internal,kubernetes.domicile.internal,motel.domicile.internal\"\nExecStart=/usr/bin/k3s_installer.sh\nRemainAfterExit=yes\nKillMode=process\n[Install]\nWantedBy=multi-user.target"
+        "contents": "[Unit]\nDescription=Run k3s installer\nWants=network-online.target\nAfter=network.target network-online.target\nConditionPathExists=/usr/bin/k3s_installer.sh\nConditionPathExists=!/usr/local/bin/k3s\n[Service]\nType=forking\nTimeoutStartSec=120\nEnvironment=\"INSTALL_K3S_EXEC=server --cluster-init --write-kubeconfig-mode=644 --secrets-encryption=true --kube-apiserver-arg enable-admission-plugins=ExtendedResourceToleration --tls-san k3s.internal,kubernetes.internal,motel.internal\"\nExecStart=/usr/bin/k3s_installer.sh\nRemainAfterExit=yes\nKillMode=process\n[Install]\nWantedBy=multi-user.target"
       },
       {
         "name": "cockpit.socket",
