feat (systeme): installation de fetchit - déploiement de conteneurs podman en GitOps à partir de ce dépôt - configuration FetchIt à créer sous /systeme/services/config.yaml - services à définir sous /systeme/services, par ex. coredns

--- a/systeme/configuration/config-base.json
+++ b/systeme/configuration/config-base.json
@@ -74,6 +74,11 @@
         "contents": "[Unit]\nDescription=Run k3s installer\nWants=network-online.target\nAfter=network.target network-online.target\nConditionPathExists=/usr/bin/k3s_installer.sh\nConditionPathExists=!/usr/local/bin/k3s\n[Service]\nType=forking\nTimeoutStartSec=120\nEnvironment=\"INSTALL_K3S_EXEC=server --cluster-init --write-kubeconfig-mode=644 --secrets-encryption=true --kube-apiserver-arg enable-admission-plugins=ExtendedResourceToleration --tls-san k3s.internal,kubernetes.internal,motel.internal\"\nExecStart=/usr/bin/k3s_installer.sh\nRemainAfterExit=yes\nKillMode=process\n[Install]\nWantedBy=multi-user.target"
       },
       {
+        "name": "fetchit-setup.service",
+        "enabled": false,
+        "contents": "[Unit]\nDescription=Setup FetchIt - GitOps-Based Approach of Podman Containers Management\nWants=network-online.target\nAfter=network.target network-online.target\nConditionPathExists=!/etc/systemd/system/fetchit.service\n\n[Service]\nType=forking\nExecStart=/usr/bin/fetchit-setup.sh\nRemainAfterExit=yes\nKillMode=process\n\n[Install]\nWantedBy=multi-user.target"
+      },
+      {
         "name": "cockpit.socket",
         "enabled": true
       },
