--- a/systeme/services/dns/archive/coredns.yaml
+++ b/systeme/services/dns/archive/coredns.yaml
@@ -85,6 +85,14 @@ spec:
         requests:
           cpu: 100m
           memory: 70Mi
+      # securityContext provenant de coredns dans k3s
+      securityContext:
+        allowPrivilegeEscalation: false
+        capabilities:
+          add:
+            - NET_BIND_SERVICE
+          drop:
+            - all
       volumeMounts:
         - name: coredns-config
           mountPath: /etc/coredns
