fix (gitops): correction de la configuration FetchIt - changement du dépôt pour exposer publiquement - la configuration utilisée dynamiquement doit détenir une configuration reload - le dossier hôte qui contient la configuration FetchIt doit être créé par le script d'installation

--- a/systeme/services/config.yaml
+++ b/systeme/services/config.yaml
@@ -1,3 +1,6 @@
+configReload:
+  configURL: https://raw.githubusercontent.com/SylChamber/labo-perso/main/systeme/services/config.yaml
+  schedule: "*/5 * * * *"
 # Déploiement via GitOps de conteneurs Podman avec FetchIt
 targetConfigs:
 # Déploiement de CoreDNS
