--- a/systeme/services/config.yaml
+++ b/systeme/services/config.yaml
@@ -1,19 +1,12 @@
 configReload:
   configURL: https://raw.githubusercontent.com/SylChamber/labo-perso/main/systeme/services/config.yaml
-  schedule: "*/5 * * * *"
+  schedule: "*/3 * * * *"
 # Déploiement via GitOps de conteneurs Podman avec FetchIt
 targetConfigs:
 # Déploiement de CoreDNS
 - url: https://github.com/SylChamber/labo-perso
   branch: main
-  systemd:
+  kube:
   - name: coredns
-    targetPath: systeme/services/dns/systemd
-    schedule: "*/3 * * * *"
-- url: https://github.com/SylChamber/labo-perso
-  branch: main
-  filetransfer:
-  - name: coredns-config
-    targetPath: systeme/services/dns/configuration
-    destinationDirectory: /etc/coredns
+    targetPath: systeme/services/dns
     schedule: "*/3 * * * *"
