fix (dns): un conteneur ne peut avoir le même nom que le pod - erreur au déploiement via fetchit - le même YAML s'exécutait pourtant sans erreur avec `podman kube play`

--- a/systeme/services/dns/coredns.yaml
+++ b/systeme/services/dns/coredns.yaml
@@ -68,7 +68,7 @@ metadata:
   name: coredns
 spec:
   containers:
-    - name: coredns
+    - name: coredns-app
       args:
         - -conf
         - /etc/coredns/Corefile
