--- a/helm-repos.yaml
+++ b/helm-repos.yaml
@@ -11,3 +11,5 @@
   url: https://nvidia.github.io/k8s-device-plugin
 - name: open-webui
   url: https://open-webui.github.io/helm-charts
+- name: smallstep
+  url: https://smallstep.github.io/helm-charts/
