build: fichier d'automatisation de tâches, exclusion de secrets - taskfile de base - exclusion de git de .key et .password, générés par outillage step-ca

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,7 @@
 # clés SSH publiques copiées par le script de génération du script de combustion
 microos/combustion/script
 microos/combustion/*.pub
+
+# secrets
+.key
+.password
