feat (microos): ajout de git et go-task à la configuration d'installation - git - git-credential-oauth - go-task (taskfile.dev)

--- a/taskfile.yaml
+++ b/taskfile.yaml
@@ -1,4 +1,7 @@
 # https://taskfile.dev
+# Sous MicroOS, utiliser le script d'installation:
+# sh -c "$(curl --location https://taskfile.dev/install.sh)" -- -d -b /usr/local/bin
+# ou installer sous /usr/bin à l'installation de MicroOS
 
 version: '3'
 
