build (certificats): début de script pour générer le manifeste Kubernetes des secrets step-ca

--- a/.env
+++ b/.env
@@ -1,3 +1,11 @@
+# Variables pour les autorités de certificats
 ORGANISATION=SylChamber
 COUNTRY=CA
 PROVINCE=Quebec
+# Variables pour le script creer-manifeste-secrets-ca.sh
+CA_NAMESPACE=step-ca
+CA_CHART_RELEASE_NAME=acme
+# si on veut modifier le nom par défaut de la charte
+# CA_CHART_NAME=step-certificates
+# le script ajoutera le nom du service interne et l'adresse IP locale au conteneur
+CA_DNS_NAMES='["ca.internal", "ac.internal"]'
