--- a/taskfile.yaml
+++ b/taskfile.yaml
@@ -14,11 +14,16 @@ tasks:
       - task -l
     silent: true
 
-  certs:create:
+  certs:create:ca:
     desc: Crée les autorités de certificats.
     dotenv: ['.env', '{{.ENV}}/.venv']
     cmds:
       - scripts/creer-ca.sh
+  certs:create:manifests:
+    desc: Crée les manifestes Kubernetes des secrets de la gestion des certificats.
+    dotenv: ['.env', '{{.ENV}}/.venv']
+    cmds:
+      - scripts/creer-manifeste-secrets-ca.sh
   certs:cleanup:
     desc: Supprime les fichiers de certificats générés.
     prompt: Attention! Avez-vous sauvegardé les fichiers de certificats avant de les supprimer?
