--- a/paquets/step-ca-secrets/kustomization.yaml
+++ b/paquets/step-ca-secrets/kustomization.yaml
@@ -27,8 +27,8 @@ secretGenerator:
         kubernetes.io/description: Mot de passe de la clé du provisionneur JWK
   - name: acme-step-certificates-secrets
     files:
-      - secrets/intermediate_ca.key
-      - secrets/root_ca.key
+      - secrets/intermediate_ca_key
+      - secrets/root_ca_key
     type: smallstep.com/private-keys
 
 generatorOptions:
