fix (certificats): mots de passe non chiffrés et clés de certificats mal indentées
- pour les Secrets dans un chart, on doit encoder manuellement en base64
- pour insérer un fichier comme valeur YAML, on doit indenter avec `nindent`

--- a/paquets/step-ca-secrets/templates/secrets.yaml
+++ b/paquets/step-ca-secrets/templates/secrets.yaml
@@ -8,7 +8,7 @@ metadata:
   name: {{ include "step-ca-secrets.fullname" . }}-ca-password
   namespace: {{ .Release.Namespace }}
 data:
-  password: {{ required "secrets.intermediate_ca_password" .Values.secrets.intermediate_ca_password }}
+  password: {{ required "secrets.intermediate_ca_password est requise" .Values.secrets.intermediate_ca_password | b64enc }}
 ---
 apiVersion: v1
 kind: Secret
@@ -19,7 +19,7 @@ metadata:
   name: {{ include "step-ca-secrets.fullname" . }}-provisioner-password
   namespace: {{ .Release.Namespace }}
 data:
-  password: {{ required "secrets.provisioner_password" .Values.secrets.provisioner_password }}
+  password: {{ required "secrets.provisioner_password est requise" .Values.secrets.provisioner_password | b64enc }}
 ---
 apiVersion: v1
 kind: Secret
@@ -31,6 +31,6 @@ metadata:
   namespace: {{ .Release.Namespace }}
 stringData:
   intermediate_ca_key: |-
-    {{ required "secrets.intermediate_ca_key" .Values.secrets.intermediate_ca_key | indent 4}}
+    {{ required "secrets.intermediate_ca_key est requise" .Values.secrets.intermediate_ca_key | nindent 4 }}
   root_ca_key: |-
-    {{ required "secrets.root_ca_key" .Values.secrets.root_ca_key | indent 4 }}
+    {{ required "secrets.root_ca_key est requise" .Values.secrets.root_ca_key | nindent 4 }}
