feat (certificats) [NON FINI]: ajout au chart des certificats publics des autorités pour step-ca
- fix: ne pas insérer de ligne vide au début des valeurs des clés des autorités
- docs: ajustement du README pour les valeurs des certificats publics

--- a/paquets/step-ca-secrets/templates/secrets.yaml
+++ b/paquets/step-ca-secrets/templates/secrets.yaml
@@ -30,7 +30,5 @@ metadata:
   name: {{ include "step-ca-secrets.fullname" . }}-secrets
   namespace: {{ .Release.Namespace }}
 stringData:
-  intermediate_ca_key: |-
-    {{ required "secrets.intermediate_ca_key est requise" .Values.secrets.intermediate_ca_key | nindent 4 }}
-  root_ca_key: |-
-    {{ required "secrets.root_ca_key est requise" .Values.secrets.root_ca_key | nindent 4 }}
+  intermediate_ca_key: |-{{ required "secrets.intermediate_ca_key est requise" .Values.secrets.intermediate_ca_key | nindent 4 }}
+  root_ca_key: |-{{ required "secrets.root_ca_key est requise" .Values.secrets.root_ca_key | nindent 4 }}
