--- a/paquets/step-ca-secrets/templates/secrets.yaml
+++ b/paquets/step-ca-secrets/templates/secrets.yaml
@@ -8,7 +8,7 @@ metadata:
   name: {{ include "step-ca-secrets.fullname" . }}-ca-password
   namespace: {{ .Release.Namespace }}
 data:
-  password: {{ required "secrets.intermediate_ca_password est requise" .Values.secrets.intermediate_ca_password | b64enc }}
+  password: {{ required "intermediate_ca.password est requise" .Values.intermediate_ca.password | b64enc }}
 ---
 apiVersion: v1
 kind: Secret
@@ -19,7 +19,7 @@ metadata:
   name: {{ include "step-ca-secrets.fullname" . }}-provisioner-password
   namespace: {{ .Release.Namespace }}
 data:
-  password: {{ required "secrets.provisioner_password est requise" .Values.secrets.provisioner_password | b64enc }}
+  password: {{ required "provisioner.password est requise" .Values.provisioner.password | b64enc }}
 ---
 apiVersion: v1
 kind: Secret
@@ -30,5 +30,5 @@ metadata:
   name: {{ include "step-ca-secrets.fullname" . }}-secrets
   namespace: {{ .Release.Namespace }}
 stringData:
-  intermediate_ca_key: |-{{ required "secrets.intermediate_ca_key est requise" .Values.secrets.intermediate_ca_key | nindent 4 }}
-  root_ca_key: |-{{ required "secrets.root_ca_key est requise" .Values.secrets.root_ca_key | nindent 4 }}
+  intermediate_ca_key: |-{{ required "intermediate_ca.key est requise" .Values.intermediate_ca.key | nindent 4 }}
+  root_ca_key: |-{{ required "root_ca.key est requise" .Values.root_ca.key | nindent 4 }}
