docs (certificats): génération automatique de doc de la charte step-ca-secrets
- utilisation de helm-docs avec un gabarit

--- a/paquets/step-ca-secrets/Chart.yaml
+++ b/paquets/step-ca-secrets/Chart.yaml
@@ -2,6 +2,7 @@ apiVersion: v2
 appVersion: "0.28.4"
 name: step-ca-secrets
 description: Provisionne des secrets pour step-ca, le serveur ACME et provisionneur de certificats TLS
+home: https://github.com/SylChamber/labo-perso/paquets/step-ca-secrets
 icon: https://raw.githubusercontent.com/smallstep/certificates/master/icon.png
 keywords:
   - acme
